Random overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -628,6 +628,7 @@ body {
   box-shadow: 1px 1px 2px black;
   border-top: 1px solid rgb(240, 240, 240);
   border-left: 1px solid rgb(240, 240, 240);
+  overflow: scroll;
 }
 
 .whitelist-span {
@@ -722,8 +723,8 @@ body {
 .program-row {
   position: sticky;
   width: 99.5%;
-  left: 0.5%;
-  top: 2px;
+  left: 10.75%;
+  top: 1px;
   height: 18px;
   background-color: rgb(0, 0, 170);
   display: flex;
